--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "postgres": "^3.3.5",
     "uuid": "^9.0.0"
   },
